<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainMenuText"
        android:src="@drawable/balll"/>

    <ListView
        android:id="@+id/listRate"
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:minHeight="420dp"
        android:maxHeight="420dp"
        android:backgroundTint="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"/>

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/main_menu"
        android:textSize="40sp"
        android:textColor="@color/yellow"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:onClick="startClick"
        android:backgroundTint="@color/gray"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:onClick="rateClick"
        android:backgroundTint="@color/gray"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:onClick="registerClick"
        android:backgroundTint="@color/gray"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/mainMenuText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="15dp"/>

    <Spinner
        android:id="@+id/choosePlayer"
        android:layout_width="0dp"
        android:maxWidth="400dp"
        android:layout_height="wrap_content"
        android:popupBackground="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonRegister"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"/>

    <EditText
        android:id="@+id/enterName"
        android:layout_width="0dp"
        android:maxWidth="230dp"
        android:maxLength="18"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/enter_name"
        style="@style/CustomTextView"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonRegister"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"/>


</androidx.constraintlayout.widget.ConstraintLayout>